@@ -7,7 +7,7 @@ Build-Depends: {$build_depends}
 
 Package: binary
 Architecture: all
-Depends: $\{misc:Depends\},
+Depends: $\{misc:Depends\}, lsb-base (>= 3.0-6)
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
