@@ -1,0 +1,4 @@
+Testname: init.d-lsb-depends
+Version: 1.0
+Description: Test for packages missing dependencies on lsb-base
+Test-For: init.d-script-needs-depends-on-lsb-base
