@@ -7,7 +7,7 @@ Build-Depends: {$build_depends}
 
 Package: {$source}
 Architecture: {$architecture}
-Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, lsb-base (>= 3.0-6)
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
@@ -15,7 +15,7 @@ Description: {$description}
 
 Package: {$source}-parsing
 Architecture: {$architecture}
-Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, lsb-base (>= 3.0-6)
 Description: {$description} -- headers parsing
  This is a test package designed to exercise the parsing of init scripts
  by Lintian.  It is part of the Lintian test suite and may do very odd
@@ -23,7 +23,7 @@ Description: {$description} -- headers parsing
 
 Package: {$source}-remote
 Architecture: {$architecture}
-Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, lsb-base (>= 3.0-6)
 Description: {$description} -- using /usr files
  This is a test package designed to exercise the checking of init scripts
  by Lintian.  It is part of the Lintian test suite and may do very odd
@@ -31,7 +31,7 @@ Description: {$description} -- using /usr files
 
 Package: {$source}-length
 Architecture: {$architecture}
-Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, lsb-base (>= 3.0-6)
 Description: {$description} -- breaking length assumptions
  Test package designed to exercise the checking of init
  scripts by Lintian.  It is part of the Lintian test suite and may do
@@ -39,7 +39,7 @@ Description: {$description} -- breaking length assumptions
 
 Package: {$source}-local
 Architecture: {$architecture}
-Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, lsb-base (>= 3.0-6)
 Description: {$description} -- using /var files
  This is another test package designed to exercise the checking of init
  scripts by Lintian.  It is part of the Lintian test suite and may do
@@ -47,7 +47,7 @@ Description: {$description} -- using /var files
 
 Package: {$source}-missing
 Architecture: {$architecture}
-Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, lsb-base (>= 3.0-6)
 Description: {$description} -- missing runlevels
  This is yet another test package designed to exercise the checking of
  init scripts by Lintian.  It is part of the Lintian test suite and may
@@ -55,7 +55,7 @@ Description: {$description} -- missing runlevels
 
 Package: {$source}-virtual
 Architecture: {$architecture}
-Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, lsb-base (>= 3.0-6)
 Description: {$description} -- virtual facilities
  Test package to exercise the virtual facilities in init.d scripts
  checks by lintian.  It is part of the Lintian test suite and may
@@ -63,7 +63,7 @@ Description: {$description} -- virtual facilities
 
 Package: {$source}-all
 Architecture: {$architecture}
-Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, lsb-base (>= 3.0-6)
 Description: {$description} -- all virtual facilities
  Test package designed to exercise the checking of virtual all facilities
  in init.d scripts checks by lintian.
