@@ -1,4 +1,5 @@
 E: init.d-script-registration: init-script-is-not-a-file etc/init.d/bar
+E: init.d-script-registration: init.d-script-needs-depends-on-lsb-base etc/init.d/foo.in (line 3)
 W: init.d-script-registration: init.d-script-missing-lsb-section etc/init.d/foo.in
 W: init.d-script-registration: script-in-etc-init.d-not-registered-via-update-rc.d etc/init.d/bar
 W: init.d-script-registration: script-in-etc-init.d-not-registered-via-update-rc.d etc/init.d/foo.in
